--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>  
   <meta charset="UTF-8" />  
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />  
-  <title>EbookMart.id - Jual Ebook Digital Terpercaya</title>  
+  <title>EbookMart.id - Jual Ebook Digital Terpercaya!</title>  
   <style>  
     /* Reset dan Base Styles */  
     * {  
