--- a/index.html
+++ b/index.html
@@ -404,8 +404,8 @@
             <h3>Panduan Bisnis Online</h3>  
             <p>Pelajari strategi sukses membangun bisnis digital dari nol hingga menghasilkan profit yang konsisten.</p>  
             <div class="product-price">  
-              <span class="product-old-price">Rp 150.000</span>  
-              Rp 99.000  
+              <span class="product-old-price">Rp 10.000</span>  
+              Rp 5.000  
             </div>  
             <a href="#" class="btn">Beli Sekarang</a>  
           </div>  
@@ -418,8 +418,8 @@
             <h3>Mastering Web Development</h3>  
             <p>Panduan lengkap untuk menjadi web developer profesional dengan teknologi terbaru.</p>  
             <div class="product-price">  
-              <span class="product-old-price">Rp 200.000</span>  
-              Rp 149.000  
+              <span class="product-old-price">Rp 10.000</span>  
+              Rp 5.000  
             </div>  
             <a href="#" class="btn">Beli Sekarang</a>  
           </div>  
@@ -432,8 +432,8 @@
             <h3>Data Science untuk Pemula</h3>  
             <p>Mulai karir di bidang data science dengan memahami konsep dasar dan tools yang digunakan.</p>  
             <div class="product-price">  
-              <span class="product-old-price">Rp 180.000</span>  
-              Rp 129.000  
+              <span class="product-old-price">Rp 10.000</span>  
+              Rp 5.000  
             </div>  
             <a href="#" class="btn">Beli Sekarang</a>  
           </div>  
@@ -446,8 +446,8 @@
             <h3>Mobile App Development</h3>  
             <p>Belajar membuat aplikasi mobile untuk iOS dan Android dengan framework populer.</p>  
             <div class="product-price">  
-              <span class="product-old-price">Rp 220.000</span>  
-              Rp 179.000  
+              <span class="product-old-price">Rp 10.000</span>  
+              Rp 5.000  
             </div>  
             <a href="#" class="btn">Beli Sekarang</a>  
           </div>  
@@ -507,7 +507,7 @@
         <h3>Kontak Kami</h3>  
         <p>Email: info@ebookmart.id</p>  
         <p>Telepon: (021) 1234-5678</p>  
-        <p>Alamat: Jl. Digital No. 123, Jakarta</p>  
+        <p>Alamat: Jl. Digital No. 123, Palangka Raya</p>  
       </div>  
     </div>  
       
