--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ nav .logo { font-weight:bold; font-size:20px; color:white; }
 .mobile-menu-toggle { display:none; font-size:28px; background:none; border:none; color:white; cursor:pointer; }
 
 /* Nav Links */
-.nav-links { display:flex; align-items:center; gap:15px; }
+.nav-links { display:flex; align-items:center; gap:15px; flex-wrap:wrap; }
 .nav-links a { color:white; text-decoration:none; font-weight:500; padding:5px 10px; border-radius:4px; transition:all 0.3s ease; position:relative; }
 .nav-links a:hover { background:rgba(255,255,255,0.1); }
 
@@ -70,6 +70,14 @@ nav .logo { font-weight:bold; font-size:20px; color:white; }
 .wishlist-btn:hover { transform:scale(1.1); }
 .wishlist-btn.active { color:#e53e3e; background:#fed7d7; }
 .wishlist-counter { background:#e53e3e; color:white; border-radius:50%; width:18px; height:18px; font-size:12px; display:flex; align-items:center; justify-content:center; position:absolute; top:-5px; right:-5px; }
+
+/* Footer */
+footer { background:linear-gradient(135deg,#1a4d8f,#2b6cb0); color:white; padding:40px 20px; margin-top:40px; }
+.footer-content { max-width:1200px; margin:0 auto; display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:30px; text-align:left; }
+.footer-section h3 { margin-bottom:15px; font-size:20px; }
+.footer-section p, .footer-section a { color:rgba(255,255,255,0.8); margin-bottom:10px; display:block; text-decoration:none; }
+.footer-section a:hover { color:white; }
+.copyright { margin-top:30px; padding-top:20px; border-top:1px solid rgba(255,255,255,0.2); text-align:center; }
 
 /* Responsive */
 @media(max-width:480px){.products-grid{grid-template-columns:1fr; padding:0 15px;}}
@@ -135,7 +143,7 @@ nav .logo { font-weight:bold; font-size:20px; color:white; }
       <div class="product-content">
         <h3>Mastering Web Development</h3>
         <p>Panduan lengkap menjadi web developer profesional dengan teknologi terbaru.</p>
-        <div class="product-price"><span class="product-old-price">Rp 12.000</span> Rp 7.000</div>
+        <div class="product-price"><span class="product-old-price">Rp 10.000</span> Rp 5.000</div>
         <a href="#" class="btn">Beli Sekarang</a>
       </div>
     </div>
@@ -145,8 +153,8 @@ nav .logo { font-weight:bold; font-size:20px; color:white; }
       <div class="product-image">📊</div>
       <div class="product-content">
         <h3>Data Science untuk Pemula</h3>
-        <p>Mulai karir di bidang data science dengan memahami konsep dasar dan tools yang digunakan.</p>
-        <div class="product-price"><span class="product-old-price">Rp 15.000</span> Rp 8.000</div>
+        <p>Mulai karir di bidang data science dengan memahami konsep dasar dan tools.</p>
+        <div class="product-price"><span class="product-old-price">Rp 10.000</span> Rp 5.000</div>
         <a href="#" class="btn">Beli Sekarang</a>
       </div>
     </div>
@@ -157,65 +165,123 @@ nav .logo { font-weight:bold; font-size:20px; color:white; }
       <div class="product-content">
         <h3>Mobile App Development</h3>
         <p>Belajar membuat aplikasi mobile untuk iOS dan Android dengan framework populer.</p>
-        <div class="product-price"><span class="product-old-price">Rp 18.000</span> Rp 9.000</div>
+        <div class="product-price"><span class="product-old-price">Rp 10.000</span> Rp 5.000</div>
         <a href="#" class="btn">Beli Sekarang</a>
       </div>
     </div>
   </div>
 </section>
 
-<footer style="background:linear-gradient(135deg,#1a4d8f,#2b6cb0); color:white; text-align:center; padding:30px 20px; margin-top:40px;">
-  <p>&copy; 2025 EbookMart.id - All Rights Reserved</p>
+<section style="background:#e9f2fa; padding:40px 0;">
+  <h2 style="text-align:center; color:#1a4d8f; margin-bottom:30px;">Kategori Populer</h2>
+  <div class="products-grid">
+    <div class="product">
+      <div class="product-content" style="text-align:center;">
+        <h3>Bisnis & Keuangan</h3>
+        <p>Ebook tentang strategi bisnis, investasi, dan manajemen keuangan.</p>
+        <a href="#" class="btn btn-outline">Jelajahi</a>
+      </div>
+    </div>
+    <div class="product">
+      <div class="product-content" style="text-align:center;">
+        <h3>Teknologi & Pemrograman</h3>
+        <p>Panduan coding, web development, dan teknologi terkini.</p>
+        <a href="#" class="btn btn-outline">Jelajahi</a>
+      </div>
+    </div>
+    <div class="product">
+      <div class="product-content" style="text-align:center;">
+        <h3>Pengembangan Diri</h3>
+        <p>Ebook untuk meningkatkan skill dan produktivitas pribadi.</p>
+        <a href="#" class="btn btn-outline">Jelajahi</a>
+      </div>
+    </div>
+  </div>
+</section>
+
+<footer>
+  <div class="footer-content">
+    <div class="footer-section">
+      <h3>EbookMart.id</h3>
+      <p>Toko ebook digital terpercaya dengan koleksi lengkap dan harga terjangkau.</p>
+    </div>
+    <div class="footer-section">
+      <h3>Link Cepat</h3>
+      <a href="#">Beranda</a>
+      <a href="#">Katalog</a>
+      <a href="#">Kategori</a>
+      <a href="#">Tentang Kami</a>
+      <a href="#">Kontak</a>
+    </div>
+    <div class="footer-section">
+      <h3>Kontak Kami</h3>
+      <p>Email: info@ebookmart.id</p>
+      <p>Telepon: (021) 1234-5678</p>
+      <p>Alamat: Jl. Digital No. 123, Palangka Raya</p>
+    </div>
+  </div>
+  <div class="copyright">
+    <p>&copy; 2025 EbookMart.id - All Rights Reserved</p>
+  </div>
 </footer>
 
 <script>
-// Hamburger toggle
+// Hamburger Toggle
 const mobileMenuToggle = document.getElementById('mobileMenuToggle');
 const navLinks = document.querySelector('.nav-links');
 mobileMenuToggle.addEventListener('click', () => { navLinks.classList.toggle('active'); });
 
-// Dropdown toggle mobile
+// Dropdown Toggle Mobile
 document.querySelectorAll('.dropdown-toggle').forEach(toggle => {
-  toggle.addEventListener('click', function(e) {
+  toggle.addEventListener('click', e => {
     if(window.innerWidth <= 768){
       e.preventDefault();
-      this.parentElement.classList.toggle('active');
+      toggle.parentElement.classList.toggle('active');
     }
   });
 });
 
-// Wishlist
-let wishlist = JSON.parse(localStorage.getItem('wishlist')) || [];
-const wishlistCount = document.getElementById('wishlistCount');
+// Wishlist Functionality
+(function() {
+  let wishlist = JSON.parse(localStorage.getItem('wishlist')) || [];
+  const wishlistCount = document.getElementById('wishlistCount');
 
-function updateWishlistCounter(){ wishlistCount.textContent = wishlist.length; }
-updateWishlistCounter();
+  function updateWishlistCounter() {
+    wishlistCount.textContent = wishlist.length;
+  }
 
-document.querySelectorAll('.wishlist-btn').forEach(btn => {
-  const id = btn.dataset.product;
-  if(wishlist.includes(id)) btn.classList.add('active');
-
-  btn.addEventListener('click', () => {
-    const index = wishlist.indexOf(id);
-    if(index === -1){ wishlist.push(id); btn.classList.add('active'); }
-    else { wishlist.splice(index,1); btn.classList.remove('active'); }
+  function toggleWishlist(productId) {
+    const index = wishlist.indexOf(productId);
+    if(index === -1) wishlist.push(productId);
+    else wishlist.splice(index,1);
     localStorage.setItem('wishlist', JSON.stringify(wishlist));
     updateWishlistCounter();
-  });
-});
+    updateWishlistButtons();
+  }
 
-// Search
-const searchBtn = document.getElementById('searchBtn');
-const searchInput = document.getElementById('searchInput');
-searchBtn.addEventListener('click', () => {
-  const query = searchInput.value.toLowerCase();
-  document.querySelectorAll('.product').forEach(prod => {
-    const title = prod.querySelector('h3').textContent.toLowerCase();
-    const desc = prod.querySelector('p').textContent.toLowerCase();
-    if(title.includes(query) || desc.includes(query)) prod.style.display='flex';
-    else prod.style.display='none';
+  function updateWishlistButtons() {
+    document.querySelectorAll('.wishlist-btn').forEach(btn => {
+      const productId = btn.dataset.product;
+      if(wishlist.includes(productId)){
+        btn.textContent = '❤️';
+        btn.classList.add('active');
+      } else {
+        btn.textContent = '🤍';
+        btn.classList.remove('active');
+      }
+    });
+  }
+
+  document.addEventListener('click', e => {
+    if(e.target.classList.contains('wishlist-btn')){
+      toggleWishlist(e.target.dataset.product);
+    }
   });
-});
+
+  updateWishlistCounter();
+  updateWishlistButtons();
+})();
 </script>
 </body>
 </html>
+
